# AISystemSecurity

./: .gitignore  main.py  pyproject.toml
Task1/: Week1_Task1_Question.ipynb  Week1_Task1_Question_Sol.ipynb  Week1_Task2_Question.ipynb  Week1_Task2_Question_Sol.ipynb
Task10/: Week10_Bonus.ipynb  Week10_Task1_Question.ipynb
Task11/: Week11_Bonus_Question.ipynb  Week11_Task1_Question.ipynb  poison_frog.py
Task13/: Week13_Task1_Question.ipynb  Week13_Task2_Question.ipynb  utils_week13.py
Task14/: Week14_Task1_Question.ipynb  Week14_Task2_Question.ipynb  Week14_utils_Question.py
Task2/: Week2_Task1_Question.ipynb
Task3/: Week3_Task1_Question.ipynb  Week3_Task2_Question.ipynb
Task5/: Week567_General_Code_Question.py  Week5_Bonus_Question.ipynb  Week5_Task1_Question.ipynb  Week5_Task2_Question.ipynb
Task5/data/: fgsm_img_label.pkl
Task6/: Week567_General_Code_Question.py  Week6_Bonus_Question.ipynb  Week6_Task1_Question.ipynb  Week6_Task2_Question.ipynb
Task7/: Week567_General_Code_Question.py  Week7_Task1_Question.ipynb  Week7_Task1_Question_think.ipynb  Week7_Task2.1_Question.ipynb  Week7_Task2.2_Question.ipynb
Task9/: Week9_Task1_Question.ipynb
