[project]
name = "aisystemsecurity"
version = "0.1.0"
description = "AI System Security Jupyterlab Environment"
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    "ipykernel",
    "matplotlib",
    "numpy",
    "pillow",
    "torch==2.7.0",
    "torchvision",
    "tqdm",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

# [tool.uv.sources]
# torch = { index = "pytorch-cpu" }
# torchvision = { index = "pytorch-cpu" }
# torchaudio = { index = "pytorch-cpu" }
