[project]
name = "aisystemsecurity"
version = "0.1.0"
description = "AI System Security Jupyterlab Environment"
readme = "README.md"
requires-python = "==3.12.12" # use any version if you do not have cuda env
dependencies = [
    "brokenaxes>=0.6.2",
    "ipykernel",
    "jupyter>=1.1.1",
    "matplotlib",
    "numpy",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "pillow",
    "scipy>=1.17.1",
    "torch==2.7.0", # use any version if you do not have cuda env
    "torchvision",
    "tqdm",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

# use this if you do not have cuda env
# [tool.uv.sources]
# torch = { index = "pytorch-cpu" }
# torchvision = { index = "pytorch-cpu" }
# torchaudio = { index = "pytorch-cpu" }
